# filingexplorer_mcp_native

./: .gitignore  Cargo.toml  LICENSE  README.md  build-macos-universal.sh
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: api_client.rs  config.rs  lib.rs  sec_client.rs  text_extraction.rs
crates/core/src/tools/: mod.rs  registry.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/settings-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/settings-app/src-tauri/icons/: icon.icns
crates/settings-app/src-tauri/src/: lib.rs
crates/settings-app/ui/: package-lock.json  package.json
crates/settings-app/ui/src/: App.svelte  app.css
crates/settings-app/ui/src/components/: AdvancedConfigs.svelte  ApiTokenInput.svelte  BasicInstall.svelte  ConfigCard.svelte  CopyButton.svelte  ManualInstructions.svelte  SecConfigSection.svelte  StatusPanel.svelte  TabBar.svelte  ToolDocs.svelte
crates/settings-app/ui/src/lib/: types.ts
scripts/: api_coverage_diff.py
